# gpu-summon

./: .gitignore  AGENTS.md  LESSONS.md  LICENSE  README.de.md  README.md  pyproject.toml  requirements.txt  summon.py
.github/workflows/: build-codeserver-image.yml  build-fullstack-image.yml  lint.yml
codeserver/: AGENTS.md.template  Caddyfile.template  Dockerfile  build-and-push.sh  onstart.sh
gpu_summon/: __init__.py  summon.py
xares/: Caddyfile.template  Dockerfile  build-and-push.sh  onstart.sh  xares-env.template
